// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots interact|Input as heading 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
  color: #00a8d8;
}

.c2 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c1 {
  position: relative;
}

.c1 .c5 {
  pointer-events: none;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  padding: 0;
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2 c3"
      onChange={[Function]}
      type="section"
      value="Editable heading"
    />
  </div>
  <p
    className="c4"
  >
    Vero facere blanditiis aut magni facere nemo beatae rem deleniti. Dignissimos rerum tempore exercitationem ducimus ut nihil magni.
  </p>
</div>
`;

exports[`Storyshots interact|Input default 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c4 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c2 {
  position: relative;
}

.c2 .c4 {
  pointer-events: none;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c3:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c3:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Text
  </h3>
  <div
    className="c2"
  >
    <input
      className="c3"
      onChange={[Function]}
      placeholder="Type something..."
      type="text"
      value=""
    />
  </div>
  <h3
    className="c1"
    type="sub"
  >
    Numeric
  </h3>
  <div
    className="c2"
  >
    <input
      className="c3"
      onChange={[Function]}
      placeholder="Type a number..."
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots interact|Input disabled 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c4 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c2 {
  position: relative;
}

.c2 .c4 {
  pointer-events: none;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c3:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c3:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Text
  </h3>
  <div
    className="c2"
  >
    <input
      className="c3"
      disabled={true}
      onChange={[Function]}
      type="text"
      value="Disabled"
    />
  </div>
  <h3
    className="c1"
    type="sub"
  >
    Numeric
  </h3>
  <div
    className="c2"
  >
    <input
      className="c3"
      disabled={true}
      onChange={[Function]}
      type="text"
      value={0}
    />
  </div>
</div>
`;

exports[`Storyshots interact|Input flat + outined 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  position: relative;
}

.c4 .c6 {
  pointer-events: none;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  padding: 0;
  outline-offset: 9px;
}

.c5:hover {
  outline: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  outline: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c3 {
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Text
  </h3>
  <p
    className="c2"
  >
    Dicta quisquam illo.
  </p>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <input
        className="c5"
        onChange={[Function]}
        type="text"
        value="odio cupiditate consequuntur itaque"
      />
    </div>
  </section>
  <p
    className="c2"
  >
    Ut aperiam ut velit pariatur temporibus expedita. Facilis corporis at.
  </p>
  <h3
    className="c1"
    type="sub"
  >
    Numeric
  </h3>
  <p
    className="c2"
  >
    Non repellat odio.
  </p>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <input
        className="c5"
        onChange={[Function]}
        type="number"
        value="culpa illo exercitationem unde"
      />
    </div>
  </section>
  <p
    className="c2"
  >
    Sed molestias at blanditiis quisquam officia non voluptatem atque nemo. Quis necessitatibus et sunt qui delectus optio dolores quasi molestiae.
  </p>
</div>
`;

exports[`Storyshots interact|Input flat 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  position: relative;
}

.c4 .c6 {
  pointer-events: none;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  padding: 0;
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c3 {
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Text
  </h3>
  <p
    className="c2"
  >
    Est labore saepe magni vel neque rem.
  </p>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <input
        className="c5"
        onChange={[Function]}
        type="text"
        value="nulla nulla animi et"
      />
    </div>
  </section>
  <p
    className="c2"
  >
    Eius ut fuga mollitia velit animi deserunt et unde inventore. Placeat autem hic sint sed.
  </p>
  <h3
    className="c1"
    type="sub"
  >
    Numeric
  </h3>
  <p
    className="c2"
  >
    Consectetur facilis facere distinctio consequatur.
  </p>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <input
        className="c5"
        onChange={[Function]}
        type="number"
        value={434488}
      />
    </div>
  </section>
  <p
    className="c2"
  >
    Iusto sint dolor officia est. Repudiandae id ab qui minus debitis voluptas voluptatem et.
  </p>
</div>
`;

exports[`Storyshots interact|Input inline 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c2:after,
input.c2:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c2:after,
input.c2:after {
  left: 1.5%;
}

.c2 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c3 {
  position: relative;
  display: inline;
}

.c3 .c5 {
  pointer-events: none;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <h3
      className="c2"
      type="sub"
    >
      Text
    </h3>
    occaecati eveniet beatae sed
     
    <div
      className="c3"
    >
      <input
        className="c4"
        onChange={[Function]}
        type="text"
        value="ullam dolorem fuga aut"
      />
    </div>
     
    est corrupti quasi animi qui non inventore fuga
    <h3
      className="c2"
      type="sub"
    >
      Numeric
    </h3>
    excepturi at sit veniam
     
    <div
      className="c3"
    >
      <input
        className="c4"
        onChange={[Function]}
        type="text"
        value={744074}
      />
    </div>
     
    rerum esse similique ipsam fugit facilis tempora est
  </p>
</div>
`;

exports[`Storyshots interact|Input min (numeric) 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  position: relative;
}

.c1 .c3 {
  pointer-events: none;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c2:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c2:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c2::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      min="0"
      onChange={[Function]}
      placeholder="Type a positive float (2 decimal precision)..."
      step="0.01"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots interact|Input outlined 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c4 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c2 {
  position: relative;
}

.c2 .c4 {
  pointer-events: none;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c3:hover {
  border: 1px solid #999;
}

.c3:focus {
  border: 1px solid #222;
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Text
  </h3>
  <div
    className="c2"
  >
    <input
      className="c3"
      onChange={[Function]}
      type="text"
      value="Outlined"
    />
  </div>
  <h3
    className="c1"
    type="sub"
  >
    Numeric
  </h3>
  <div
    className="c2"
  >
    <input
      className="c3"
      onChange={[Function]}
      type="number"
      value="42"
    />
  </div>
</div>
`;

exports[`Storyshots interact|Input overview 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    README.md
  </p>
</div>
`;

exports[`Storyshots interact|Input prefix/suffix 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c8 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c37 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c38 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c39 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0;
  height: 100%;
  font-size: 20px;
  left: 0.5em;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0;
  height: 100%;
  font-size: 20px;
  right: 0.5em;
}

.c2 {
  position: relative;
}

.c2 .c5 {
  pointer-events: none;
}

.c40 .c5 {
  pointer-events: none;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c3:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c3:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        onChange={[Function]}
        placeholder="Type something..."
        type="text"
        value=""
      />
      <span
        className="c4"
        type="suffix"
      >
        <span
          className="c5 c6"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c3"
        onChange={[Function]}
        placeholder="Type something..."
        type="text"
        value=""
      />
      <span
        className="c7"
        type="prefix"
      >
        <span
          className="c5 c6"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c3"
        onChange={[Function]}
        placeholder="Type something..."
        type="text"
        value=""
      />
      <span
        className="c7"
        type="prefix"
      >
        <span
          className="c5 c6"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </span>
      <span
        className="c4"
        type="suffix"
      >
        <span
          className="c5 c6"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|Input purposes 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c16 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c3 {
  position: relative;
}

.c3 .c16 {
  pointer-events: none;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c8:hover {
  border: 1px solid #999;
}

.c8:focus {
  border: 1px solid #222;
}

.c8::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c12 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  padding: 0;
  outline-offset: 9px;
}

.c12:hover {
  outline: 1px solid rgba(var(--focus-color),0.5);
}

.c12:focus {
  outline: 1px solid rgba(var(--focus-color),1);
}

.c12::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c7:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c7:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c7::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c9 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c9:hover {
  border: 1px solid #999;
}

.c9:focus {
  border: 1px solid #222;
}

.c9::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c10 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #4caf50;
  background-color: unset;
}

.c10:hover {
  border: 1px solid #999;
}

.c10:focus {
  border: 1px solid #222;
}

.c10::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #ef5350;
  background-color: unset;
}

.c11:hover {
  border: 1px solid #999;
}

.c11:focus {
  border: 1px solid #222;
}

.c11::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c13 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  padding: 0;
  outline-offset: 9px;
}

.c13:hover {
  outline: 1px solid rgba(var(--focus-color),0.5);
}

.c13:focus {
  outline: 1px solid rgba(var(--focus-color),1);
}

.c13::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c14 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  padding: 0;
  outline-offset: 9px;
}

.c14:hover {
  outline: 1px solid rgba(var(--focus-color),0.5);
}

.c14:focus {
  outline: 1px solid rgba(var(--focus-color),1);
}

.c14::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c15 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  padding: 0;
  outline-offset: 9px;
}

.c15:hover {
  outline: 1px solid rgba(var(--focus-color),0.5);
}

.c15:focus {
  outline: 1px solid rgba(var(--focus-color),1);
}

.c15::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Text
  </h3>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <input
        className="c4"
        onChange={[Function]}
        type="text"
        value="Primary"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c5"
        onChange={[Function]}
        type="text"
        value="Secondary"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c6"
        onChange={[Function]}
        type="text"
        value="Success"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c7"
        onChange={[Function]}
        type="text"
        value="Danger"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c8"
        onChange={[Function]}
        type="text"
        value="Primary"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c9"
        onChange={[Function]}
        type="text"
        value="Secondary"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c10"
        onChange={[Function]}
        type="text"
        value="Success"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c11"
        onChange={[Function]}
        type="text"
        value="Danger"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c12"
        onChange={[Function]}
        type="text"
        value="Primary"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c13"
        onChange={[Function]}
        type="text"
        value="Secondary"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c14"
        onChange={[Function]}
        type="text"
        value="Success"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c15"
        onChange={[Function]}
        type="text"
        value="Danger"
      />
    </div>
  </div>
  <h3
    className="c1"
    type="sub"
  >
    Numeric
  </h3>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <input
        className="c4"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c5"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c6"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c7"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c8"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c9"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c10"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c11"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c12"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c13"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c14"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c15"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|Input required 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c4 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c2 {
  position: relative;
}

.c2 .c4 {
  pointer-events: none;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c3:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c3:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Text
  </h3>
  <div
    className="c2"
  >
    <input
      className="c3"
      onChange={[Function]}
      placeholder="Type something..."
      required={true}
      type="text"
      value=""
    />
  </div>
  <h3
    className="c1"
    type="sub"
  >
    Numeric
  </h3>
  <div
    className="c2"
  >
    <input
      className="c3"
      onChange={[Function]}
      placeholder="Type some number..."
      required={true}
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots interact|Input sizes 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1,
input.c1 {
  font-size: 0.8125em;
  text-transform: uppercase;
  color: #999;
  display: table;
  overflow: hidden;
  white-space: nowrap;
}

.c1:after,
input.c1:after {
  border-top: 1px solid #eee;
  content: '';
  display: table-cell;
  position: relative;
  top: 0.625em;
  width: 100%;
}

.c1:after,
input.c1:after {
  left: 1.5%;
}

.c1 .c9 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c3 {
  position: relative;
}

.c3 .c9 {
  pointer-events: none;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 0.6875rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 0.8125rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1.1875rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c7:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c7:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c7::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1.5rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c8:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c8:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c8::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <h3
    className="c1"
    type="sub"
  >
    Text
  </h3>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <input
        className="c4"
        onChange={[Function]}
        type="text"
        value="Tiny"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c5"
        onChange={[Function]}
        type="text"
        value="Small"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c6"
        onChange={[Function]}
        type="text"
        value="Default"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c7"
        onChange={[Function]}
        type="text"
        value="Large"
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c8"
        onChange={[Function]}
        type="text"
        value="Huge"
      />
    </div>
  </div>
  <h3
    className="c1"
    type="sub"
  >
    Numeric
  </h3>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <input
        className="c4"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c5"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c6"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c7"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
    <div
      className="c3"
    >
      <input
        className="c8"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|Input step (numeric) 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  position: relative;
}

.c1 .c3 {
  pointer-events: none;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c2:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c2:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c2::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      placeholder="Type a float..."
      step="any"
      type="number"
      value=""
    />
  </div>
  <div
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      placeholder="Type an int..."
      step="1"
      type="number"
      value=""
    />
  </div>
</div>
`;
